# switchbot

./: .cursorrules  .gitignore  deploy.ps1  template.yaml
.aws-sam/: build.toml
lambda/: README.md  pyproject.toml
lambda/src/: api_http.py  fetch_device_data.py  handler.py  models.py  router.py  slack_verify.py  switchbot_client.py  switchbot_service.py
lambda/src/routes/: __init__.py  api.py  schedule.py
lambda/switchbot_lock_api/: pyproject.toml
lambda/switchbot_lock_api/src/: __init__.py  handler.py  models.py  switchbot_client.py
lambda/switchbot_lock_api/tests/: test_switchbot_client.py
lambda/tests/: test_handler.py
