[project]
name = "switchbot-api"
version = "0.1.0"
description = "AWS Lambda: SwitchBot CO2 監視と WiFi SSID 保存 API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-dotenv"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
