[project]
name = "switchbot-lock-api"
version = "0.1.0"
description = "AWS Lambda: SwitchBot スマートロックを施錠する Function URL 用ハンドラー"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
